# Ballast

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  spec.md
.claude/plans/: cost.md  dashboard.md  day2-sync-server.md  day3-hook.md  day4-demo.md  escalation.md  evaluator.md  guardrails.md  long-term.md  otel.md  phrase1-parta.md  phrase1-partb.md  phrase2-spec-trajectory.md  probe.md  spec-delta-wireframe.md  step1-scaffold.md  step2-agui-streaming.md  structural-gaps-projet-overview.md  to-do-1.md  todo-2.md  trajectory-orchestration.md
ballast/: __init__.py
ballast/adapters/: agui.py  otel.py  tinyfish.py
ballast/core/: agent_output.py  checkpoint.py  constants.py  cost.py  dashboard.py  escalation.py  evaluator.py  guardrails.py  hook.py  memory.py  node_tools.py  probe.py  server.py  spec.py  stream.py  sync.py  trajectory.py
scripts/: observe.py  server.py
tests/: test_agent_output.py  test_checkpoint.py  test_cost.py  test_dashboard.py  test_escalation.py  test_evaluator.py  test_guardrails.py  test_hook.py  test_memory.py  test_otel.py  test_probe.py  test_spec.py  test_stream.py  test_sync.py  test_trajectory.py
